[package]
name = "kramer"
version = "0.2.0"
authors = ["Danny Hadley <dadleyy@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/sizethree/kramer"
repository = "https://github.com/sizethree/kramer.git"
description = "Redis communication"

[dependencies.async-std]
version = "^0.99"
optional = true

[features]
kramer-async = ["async-std"]
