[package]
name = "kramer"
version = "0.3.0"
authors = ["Danny Hadley <dadleyy@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/sizethree/kramer"
repository = "https://github.com/sizethree/kramer.git"
description = "Enumerated types implementing std::fmt::Display for sending RESP messages to redis."
keywords = ["redis"]

[dependencies.async-std]
version = "^0.99"
optional = true

[features]
kramer-async = ["async-std"]
